# skill-adk

./: .gitignore  criacao-de-skill.md  python-adk-creator.skill
.claude/skills/adk2-creator/: SKILL.md
.claude/skills/adk2-creator/referencias/: gargalos.md  snippets-adk2.md
.claude/skills/adk2-creator/tasks/: 01-setup.md  02-implementacao.md  03-configuracao.md
.claude/skills/skill-creator/: adk2-creator.skill  python-adk-creator.skill
python-adk-creator-workspace/iteration-1/: benchmark.json  benchmark.md
python-adk-creator-workspace/iteration-1/eval-1-weather-agent/with_skill/: CREATION_REPORT.md  INDEX.md  PROJECT_SUMMARY.txt  PROJECT_TREE.txt  VERIFICATION_CHECKLIST.md  eval_metadata.json  timing.json
python-adk-creator-workspace/iteration-1/eval-1-weather-agent/with_skill/src/: __init__.py  config.py
python-adk-creator-workspace/iteration-1/eval-1-weather-agent/with_skill/src/agents/: __init__.py  base_agent.py
python-adk-creator-workspace/iteration-1/eval-1-weather-agent/without_skill/: CONTRIBUTING.md  DELIVERY_REPORT.md  INDEX.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  README.md  START_HERE.md  eval_metadata.json  main.py  pyproject.toml  requirements.txt  timing.json
python-adk-creator-workspace/iteration-1/eval-1-weather-agent/without_skill/src/weather_agent/: __init__.py  tools.py
python-adk-creator-workspace/iteration-1/eval-2-calculator-bot/with_skill/: INDEX.md  MANIFEST.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICK_START.md  README.md  eval_metadata.json  main.py  requirements.txt  timing.json
python-adk-creator-workspace/iteration-1/eval-2-calculator-bot/with_skill/src/: __init__.py  config.py
python-adk-creator-workspace/iteration-1/eval-2-calculator-bot/without_skill/: .env.example  .gitignore  FINAL_REPORT.txt  IMPLEMENTATION_SUMMARY.md  KEY_FILES_OVERVIEW.md  MANIFEST.md  PROJECT_STRUCTURE.md  README.md  TREE.txt  eval_metadata.json  main.py  timing.json
python-adk-creator-workspace/iteration-1/eval-2-calculator-bot/without_skill/src/: __init__.py  agent.py  config.py
python-adk-creator-workspace/iteration-1/eval-3-research-assistant/with_skill/: CREATION_SUMMARY.md  DIRECTORY_STRUCTURE.md  FILES_CREATED.txt  PROJECT_OVERVIEW.md  PROJECT_TREE.txt  README.md  eval_metadata.json  main.py  requirements.txt  timing.json
python-adk-creator-workspace/iteration-1/eval-3-research-assistant/with_skill/src/: __init__.py  config.py
python-adk-creator-workspace/iteration-1/eval-3-research-assistant/without_skill/: .env.example  .gitignore  DELIVERY_SUMMARY.txt  FILE_MANIFEST.md  IMPLEMENTATION_HIGHLIGHTS.md  PROJECT_OVERVIEW.md  PROJECT_TREE.txt  README.md  START_HERE.md  eval_metadata.json  pyproject.toml  requirements.txt  timing.json
python-adk-creator-workspace/iteration-1/eval-3-research-assistant/without_skill/research_assistant/: __init__.py  agent.py  config.py  main.py  tools.py
python-adk-creator-workspace/iteration-1/eval-3-research-assistant/without_skill/research_assistant/examples/: __init__.py  basic_research.py  custom_tools.py
python-adk-creator-workspace/iteration-1/eval-3-research-assistant/without_skill/tests/: test_agent.py  test_tools.py
python-adk-creator-workspace/iteration-2/: benchmark.md
python-adk-creator-workspace/iteration-2/eval-1-weather-agent/with_skill/weather_agent/: .gitignore  README.md  main.py
python-adk-creator-workspace/iteration-2/eval-1-weather-agent/without_skill/: .env.example  README.md  main.py  pyproject.toml
python-adk-creator-workspace/iteration-2/eval-1-weather-agent/without_skill/tests/: test_agent.py  test_tools.py
python-adk-creator-workspace/iteration-2/eval-1-weather-agent/without_skill/weather_agent/: __init__.py  agent.py  tools.py
python-adk-creator-workspace/iteration-2/eval-2-calculator-bot/with_skill/calculator_bot/: README.md  main.py
python-adk-creator-workspace/iteration-2/eval-2-calculator-bot/without_skill/: pyproject.toml
python-adk-creator-workspace/iteration-2/eval-2-calculator-bot/without_skill/calculator_bot/: __init__.py  agent.py  tools.py
python-adk-creator-workspace/iteration-2/eval-3-research-assistant/with_skill/research_assistant/: README.md  main.py
python-adk-creator-workspace/iteration-2/eval-3-research-assistant/without_skill/: .env.example  .gitignore  README.md  pyproject.toml
python-adk-creator-workspace/iteration-2/eval-3-research-assistant/without_skill/research_assistant/: __init__.py  agent.py  cli.py  config.py  tools.py
python-adk-creator-workspace/iteration-2/eval-3-research-assistant/without_skill/tests/: test_agent.py  test_config.py  test_tools.py
scripts/: README.md  create_and_push_repo.sh
(+35 files in other folders)
