[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-assistant"
version = "0.1.0"
description = "Research assistant using Google Generative AI SDK with web search and content summarization tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Research Team", email = "research@example.com"}
]

dependencies = [
    "google-genai>=0.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
