[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "research-assistant"
version = "0.1.0"
description = "AI-powered research assistant with web search and summarization (Google GenAI / Gemini)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["genai", "gemini", "research", "llm", "agent"]

dependencies = [
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
research-assistant = "research_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["research_assistant"]
omit = ["tests/*"]
